Fix spacing issue with comments

--- a/client/src/components/SuggestionPage/CommentSection/Comment/Comment.module.css
+++ b/client/src/components/SuggestionPage/CommentSection/Comment/Comment.module.css
@@ -7,7 +7,7 @@
 }
 
 .comment + .comment {
-  margin-top: 0.9375rem;
+  margin-top: 2rem;
   padding-top: 2rem;
   border-top: 1px solid rgb(0, 0, 0, 0.1);
 }
