--- a/client/src/components/SuggestionPage/CommentSection/Replies/Replies.module.css
+++ b/client/src/components/SuggestionPage/CommentSection/Replies/Replies.module.css
@@ -4,7 +4,6 @@
   gap: 1.0625rem;
   border-left: 1px solid rgb(0, 0, 0, 0.1);
   padding-left: 1rem;
-  margin-bottom: 1.0625rem;
 }
 
 @media (min-width: 768px) {
